# GPGPUEngine

./: .gitignore  AGENTS.md  CMakeLists.txt  LEADERBOARD.md
.github/workflows/: cmake.yml
docs/: ao_viewer_plan.md  vulkan_async_compute_plan.md  vulkan_async_render_plan.md  vulkan_jpeg_decode_benchmark.md  vulkan_pipeline_cache_plan.md  vulkan_radixsort_gtx1650_optimization.md
libs/base/: CMakeLists.txt
libs/base/libbase/: lru_cache.h  nvtx_markers.h
libs/gpu/: CMakeLists.txt
libs/gpu/libgpu/: context.cpp  device.cpp  device.h  device_test.cpp  lru_cache_test.cpp  shared_device_buffer.cpp  shared_device_buffer.h  shared_device_image.cpp  work_size.h
libs/gpu/libgpu/cuda/: cuda_api.cpp  cuda_api.h
libs/gpu/libgpu/vulkan/: CMakeLists.txt  README.md  data_image.h  device.cpp  (+5 more)
libs/images/: CMakeLists.txt
libs/images/libimages/: images.cpp  images.h
libs/utils/: CMakeLists.txt
prompts/2603/09/: 132513 импорт базы gpgpu tasks и старт leaderboard.md
prompts/2603/15/: 000241 radix sort unit test.md  005810 исправление старого коммита aplusb unit test.md  110903 правило про минимальность изменений в agents.md  111046 кэширование vulkan pipeline.md  155921 маскирование видеокарт через gpgpu_visible_devices.md  162900 профилирование radix sort vulkan и cuda.md  174158 асинхронное исполнение рендеринга vulkan.md  180000 асинхронное исполнение vulkan compute кернелов.md  211322 поддержка больших 1d кернелов на intel uhd 770.md
prompts/2603/16/: 005659 viewer для ambient occlusion.md
prompts/2603/17/: 024500 ускорение vulkan radix sort на gtx 1650.md  051200 корректность radix sort на uhd770 и lavapipe.md  121340 догнать отставание vulkan radix sort от cuda на 1650.md  204815 явная проверка spir_clang_bin.md  210738 исправление линковки cuda runtime.md
prompts/2603/20/: 232623 jpeg decode benchmark на vulkan.md
prompts/2603/21/: 140912 обновление git и запуск юнит-тестов.md  143606 jpeg тесты на lavapipe.md  144700 radix-sort и jpeg тесты на 4090.md  233800 benchmark sift matching vulkan.md
prompts/2603/29/: 145642 hdr packed image benchmark before bc6h.md
scripts/: profile_vulkan_async_nsys.py
scripts/linux/: install_dependencies.sh  install_intel_igpu_driver.sh  install_opencl_cpu_driver.sh  install_vulkan_sdk.sh
src/: main_ao_viewer.cpp  main_aplusb.cpp  main_linear_bvh.cpp
src/kernels/vk/: aplusb.comp  ray_tracing_render_brute_force.comp  ray_tracing_render_using_lbvh.comp
src/viewer/: camera_orbit.cpp  camera_orbit.h  camera_orbit_test.cpp
(+77 files in other folders)
